--- a/styles.css
+++ b/styles.css
@@ -566,3 +566,13 @@ input[type="button"]:hover {
 .back-link:hover {
 	text-decoration: underline;
 }
+.back-link {
+	display: block;
+	text-align: center;
+	margin-top: 20px;
+	color: #007bff;
+	text-decoration: none;
+}
+.back-link:hover {
+	text-decoration: underline;
+}
